ChainServer/memory_store/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memory-store
  labels:
    name: memory-store
    app.kubernetes.io/name: memory-store
    app.kubernetes.io/component: ai-memory
